[build-system]
requires = ['setuptools >= 61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'deterrers-cli'
version = '0.8'
authors = [
    {name = 'Lars Kiesow', email = 'lkiesow@uos.de'}
]
description = 'Command line client for DETERRERS'
readme = {file = 'README.md', content-type = 'text/markdown'}
requires-python = ">=3.10"
license = {text = 'MIT'}
dependencies = [
    'deterrers-api>=0.5',
    'PyYAML',
    'Click'
]

[project.urls]
Homepage = 'https://github.com/virtUOS/deterrers-cli'
Repository = 'https://github.com/virtUOS/deterrers-cli'

[project.scripts]
deterrers-cli = 'deterrerscli.__main__:cli'
